--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1059,7 +1059,7 @@ a {
 .cid-sHqROhPZFK {
   padding-top: 4rem;
   padding-bottom: 0rem;
-  background-color: #ffef06;
+  background-image: url("../../../assets/images/covid-19-banner-890x215.png");
 }
 .cid-sHqROhPZFK .mbr-section-title {
   color: #000000;
