--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1056,14 +1056,6 @@ a {
     left: -1rem;
   }
 }
-.cid-sHqROhPZFK {
-  padding-top: 4rem;
-  padding-bottom: 0rem;
-  background-image: url("../../../assets/images/covid-19-banner-890x215.png");
-}
-.cid-sHqROhPZFK .mbr-section-title {
-  color: #000000;
-}
 .cid-sD88HJAX2W {
   padding-top: 1rem;
   padding-bottom: 0rem;
@@ -1087,6 +1079,14 @@ a {
 }
 .cid-sD88HJAX2W .mbr-description {
   color: #05aba3;
+}
+.cid-sIiI2kAOo4 {
+  padding-top: 5rem;
+  padding-bottom: 4rem;
+  background-image: url("../../../assets/images/mbr-1920x1281.jpg");
+}
+.cid-sIiI2kAOo4 .mbr-section-title {
+  color: #000000;
 }
 .cid-s48udlf8KU {
   padding-top: 3rem;
@@ -1164,36 +1164,6 @@ a {
   }
 }
 .cid-sD7UwyBjI1 .price-term {
-  text-align: center;
-}
-.cid-sFsc9Z6aDF {
-  background-image: url("../../../assets/images/mbr-4-1920x1280.jpg");
-}
-.cid-sFsc9Z6aDF .card-wrapper {
-  background: #000000;
-  border-radius: 4px;
-}
-@media (max-width: 767px) {
-  .cid-sFsc9Z6aDF .card-wrapper {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-sFsc9Z6aDF .card-wrapper {
-    padding: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-sFsc9Z6aDF .card-wrapper {
-    padding: 4rem;
-  }
-}
-.cid-sFsc9Z6aDF .mbr-text,
-.cid-sFsc9Z6aDF .mbr-section-btn {
-  color: #ffffff;
-}
-.cid-sFsc9Z6aDF .card-title,
-.cid-sFsc9Z6aDF .card-box {
   text-align: center;
 }
 .cid-sD7Uf8RbrG {
